create github pages

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html#form1-e">
                         <img src="assets/images/27331560-1692303030826702-4189025105702896189-n-122x122.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header10 cid-rkSONMkF2f mbr-fullscreen mbr-parallax-background" id="header10-5">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header10 cid-rkSONMkF2f mbr-fullscreen mbr-parallax-background" id="header10-5">
 
     
 
@@ -341,7 +341,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ILfzTMB0WXA5rD+n5eYqG5A3o/dcbMXCcK8LfHQukIKWcH9ZqVekdVE516c3tVnzjH0dl7p9jvXoy1RZdCmNHLN0f2Y9lKixDYdaPyU8FOP1I1jsgs849GaVjdz9DD/f">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="To6pF5iHD3LV+RCBaaI+5B53JBUY++uL4iYRw5G5jASN4W/xa64D2JzI5cwuDwujr7Ohg12kGKZpxcUlMFrb/tzsFZRHun1WP2JkPB2JNqXaplLIpyM+StlAPsCgxmgl">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Grazie per aver compilato il modulo!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
